--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             laborum. Perferendis illum animi cum molestias, consectetur nam quaerat obcaecati beatae.</p>
     </div>
     <!--<button onclick="removeCharacters('main_content', removeCharacters('main_h1', removeCharacters('main_h2'))); ;">Remove Characters</button>-->
-    <button id="button" onclick="removeCharacters('main_content', 0.0000025, 'main_h2', 25, 'main_h1', 25); ;">Remove Characters</button>
+    <button id="button" onclick="removeCharacters('main_content', 0.0000025, 'main_h2', 25, 'main_h1', 25);">Remove Characters</button>
+
 </body>
 
 </html>
