--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games of Hunger</title>
+    <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>    
     <link rel="stylesheet" type="text/css" href="styles\style.css">
     <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/tools.js"></script>
@@ -13,28 +14,15 @@
 <body>
     <!-- <div id="overlay-hideall"></div> -->
     <div class="overlay_filter"></div>
-    <h1 id="main_h1">GAMES OF HUNGER: COMMAND CONSOLE</h1>
-    <h2 id="main_h2">ARENA SETUP</h2>
-    <div id="main_content">
-        <p>Welcome to the Games of Hunger command terminal. With this software, you will control and monitor the outcome
-            of the games.</p>
-        <p>The games are simple; Up to 12 participants are placed in the arena to fight to the death. Whether they
-            choose to do this straight away, or wait it out until they have an advantage, is up to them. Perhaps they
-            will form temporary groups to survive the wilderness and rivals. Perhaps not. It is all up to them. What is
-            certain though, is there may only be one victor.</p>
-        <p>From this terminal you will have full control of who goes in and full access to monitoring systems. It is
-            possible outside forces may send in supplies to their favourite assets. They may even have help right from
-            the start. This can be unavoided as per the rules of the games. However, through this terminal you may be
-            able to alter the arena itself. Making it harder for particular participants or just to make the games more
-            interesting.</p>
-        <p>We hope you enjoy your experience today. Please start with initial setup by selecting the below START
-            button.</p>
-    </div>
+    <h1 id="main_h1"></h1>
+    <h2 id="main_h2"></h2>
+    <div id="main_content"></div>
     <!--<button onclick="removeCharacters('main_content', removeCharacters('main_h1', removeCharacters('main_h2'))); ;">Remove Characters</button>-->
     <button style="display: block; margin: 20px auto;" id="button"
         onclick="removeCharacters('main_content', 0.00000000000000000000000001, 'main_h2', 10, 'main_h1', 10);">START</button>
 
-    <script>revealCharacters('main_h1', 100, 'main_h2', 100, 'main_content', 100);</script>
+    <!-- <script>revealCharacters('main_h1', 100, 'main_h2', 100, 'main_content', 100);</script> -->
+    <script>document.addEventListener('DOMContentLoaded', loadYaml("index"));</script>
 </body>
 
 </html>
